created a mjpeg video class

--- a/modules/lib/mavelous_web/index.html
+++ b/modules/lib/mavelous_web/index.html
@@ -6,22 +6,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!-- ANALYTICS -->
-<script>
-  if (window.location.href.indexOf('mavelousdemo.appspot.com') != -1) {
-    console.log('Enabling analytics.');
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36746049-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script');
-      ga.type = 'text/javascript';
-      ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(ga, s);
-    })();
-  }
-</script>
 <link rel="stylesheet" type="text/css" href="third_party/bootstrap/css/bootstrap.css" />
   <style>
     body {
@@ -62,16 +46,21 @@
 <!-- GOOGLE CLOSURE -->
 <script src="third_party/closure-library/closure/goog/base.js"></script>
 
-<!-- MAVELOUS -->
+<!-- MAVELOUS --> 
 <script src="script/mavelous-deps.js"></script>
 <script src="script/app.js"></script>
 
+<!-- REDHAWK -->
+
+<script src="script/video.js"></script>
 
 <script>
+
   $(function() {
   window.mavelous_app = new Mavelous.App();
   mavelous_app.start();
     });
+	
 </script>
 <script type="text/template" id="commstatustexttemplate">
     MAV <%= mav_html %> | SERVER <%= server_html %>
@@ -161,5 +150,18 @@
       <a href="#" class="btn" data-dismiss="modal">Close</a>
     </div>
   </div>
+  <div id="video"></div>
+	<div id="notes">
+		YEA!
+	</div>
+	   <script>
+document.load = tutorial.notepad.loadVideo();
+
+</script>
+  <!--
+  <div id="video0">
+  <img src=http://localhost:8080/?action=stream/>
+  </div>
+  -->
 </body>
 </html>
