fixed unit tests

--- a/modules/lib/mavelous_web/video-test.html
+++ b/modules/lib/mavelous_web/video-test.html
@@ -4,6 +4,8 @@
 <script src="third_party/closure-library/closure/goog/base.js"></script>
 <script src="script/video.js"></script>
 <script src="script/video_test.js"> </script>
+<script src="script/timer.js"></script>
+<script src="script/timer_test.js"></script>
 </head>
 <body>
 
