--- a/modules/lib/mavelous_web/index.html
+++ b/modules/lib/mavelous_web/index.html
@@ -151,17 +151,8 @@
     </div>
   </div>
   <div id="video"></div>
-	<div id="notes">
-		YEA!
-	</div>
-	   <script>
-document.load = tutorial.notepad.loadVideo();
-
-</script>
-  <!--
-  <div id="video0">
-  <img src=http://localhost:8080/?action=stream/>
-  </div>
-  -->
+	<script>
+		document.load = RedUI.video.loadVideo();
+	</script>
 </body>
 </html>
